# FractalViewer

./: .gitignore  .gitmodules  CMakeLists.txt  FractalViewer.sln  README.md
FractalCore/: CMakeLists.txt  colour.h  colour_algorithms.h  colour_palette.h  complex_bounds.h  fractal_generator.h  fractal_generator_factory.h  fractal_renderer.cpp  fractal_renderer.h  input_actions.h  julia_generator.cpp  julia_generator.h  mandelbrot_generator.cpp  mandelbrot_generator.h  resolution.h
FractalViewer/: CMakeLists.txt  FractalViewer.vcxproj  FractalViewer.vcxproj.filters  application.cpp  application.h  colour.h  colour_algorithms.h  colour_palette.h  colour_palette_generator.h  complex_bounds.h  fractal_generator.h  fractal_generator_factory.h  fractal_renderer.cpp  fractal_renderer.h  imgui.ini  input_actions.h  julia_generator.cpp  julia_generator.h  main.cpp  mandelbrot_generator.cpp  mandelbrot_generator.h  zoom_action.h
